--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.active{
+  @apply font-medium  text-purple-600 transition-colors duration-200
+}
+
+.default{
+  @apply font-medium text-gray-700 transition-colors duration-200 hover:text-sky-500
+}
+
