made navbar responsive

--- a/src/index.css
+++ b/src/index.css
@@ -3,10 +3,9 @@
 @tailwind utilities;
 
 .active{
-  @apply font-medium  text-purple-600 transition-colors duration-200
+  @apply font-medium  text-white transition-colors duration-200
 }
 
 .default{
   @apply font-medium text-gray-700 transition-colors duration-200 hover:text-sky-500
 }
-
